# dokumen-skripsi

./: .gitignore  README.MD
buku/: data.tex  referensi.bib  skripsi.tex
buku/Bab/: bab1.tex  bab2.tex  bab3.tex  bab4.tex  bab5.tex  bab6.tex  bab7.tex
buku/Lampiran/: lampA.tex
dokumen/: data.tex  referensi.bib
dokumen/Bab/: bab1.tex  bab2.tex  bab3.tex  bab4.tex  bab5.tex
program/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake
program/Testing/Temporary/: CTestCostData.txt
program/data/: README.MD
program/data/input/: gveii.txt
program/data/result/: gveii.txt
program/include/: entity.h  rombongan.h
program/libs/argparse/: Makefile  argparseConfig.cmake  cmake_install.cmake
program/src/: dtw.cpp  dtw.h  eval.cpp  eval.h  input.cpp  input.h  io.cpp  io.h  main.cpp  parser.cpp  parser.h  reader.cpp  reader.h  rombongan.cpp  similarity.cpp  similarity.h  utils.cpp  utils.h
program/test/: test-dtw.cpp  test-eval.cpp  test-parser.cpp  test-similarity.cpp
program/test/fixtures/: test_data.txt
program/test/fixtures/input/: test_data.txt
program/test/fixtures/result/: test_data.txt
program/test/io/: test-i-exception-cosine-similarity.cpp  test-i-exception-maximum-range.cpp  test-i-exception-minimum-entity.cpp  test-i-exception-minimum-interval.cpp  test-i-path.cpp  test-i.cpp  test-io-exception-maximum-range.cpp  test-io-exception-minimum-entity.cpp  test-io.cpp
report/: main.tex
revisi/: data.tex  referensi.bib  skripsi.tex
revisi/Bab/: bab1.tex  bab2.tex  bab3.tex  bab4.tex  bab5.tex  bab6.tex  bab7.tex
